tests/ui/consts/const_in_pattern/issue-44333.stderr
error: function pointers and raw pointers not derived from integers in patterns behave unpredictably and should not be relied upon. See https://github.com/rust-lang/rust/issues/70861 for details.
  --> $DIR/issue-44333.rs:15:9
   |
LL |         FOO => println!("foo"),
   |         ^^^

error: function pointers and raw pointers not derived from integers in patterns behave unpredictably and should not be relied upon. See https://github.com/rust-lang/rust/issues/70861 for details.
  --> $DIR/issue-44333.rs:16:9
   |
LL |         BAR => println!("bar"),
   |         ^^^

error: aborting due to 2 previous errors

